prometheus/grafana-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-1618157993-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.k8s.rsletten.com
    secretName: grafana-cert
